--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -110,7 +110,9 @@ ISSUE: Several registrations contain TODOs which should be replaced with links
   <tr>
     <td>opus</td>
     <td>Opus</td>
-    <td>TODO (AudioDecoderConfig.description)</td>
+    <td>[Opus WebCodecs
+      Registration](https://www.w3.org/TR/webcodecs-opus-codec-registration/)
+    [[WEBCODECS-OPUS-CODEC-REGISTRATION]]</td>
   </tr>
   <tr>
     <td>vorbis</td>
