Add normative text on fingerprinting for hardwareAcceleration.

--- a/index.src.html
+++ b/index.src.html
@@ -1901,6 +1901,11 @@ specialized hardware. {{HardwareAcceleration/prefer-hardware}} and
 respect these values when possible, User Agents may ignore these values in some
 or all circumstances for any reason.
 
+To avoid fingerprinting issues, User Agents SHOULD ensure rejection or
+acceptance of a given {{HardwareAcceleration}} preference reveals no additional
+information on top of what is revealed by [[media-capabilities]] or other web
+exposed capability systems the User Agent may provide.
+
 <div class='note'>
   NOTE: Good examples of when a User Agent may ignore
   {{HardwareAcceleration/prefer-hardware}} or
