Switch {{Codec String}} to <a>Codec String</a>

--- a/index.src.html
+++ b/index.src.html
@@ -1445,17 +1445,17 @@ Run these steps:
 1. If |config| is an {{AudioDecoderConfig}} or {{VideoDecoderConfig}} and the
     User Agent can't provide a <a>codec</a> that can decode the exact profile
     (where present), level (where present), and constraint bits (where present)
-    indicated by the {{Codec String}}, return `false`.
+    indicated by the <a>Codec String</a>, return `false`.
 2. If |config| is an {{AudioEncoderConfig}} or {{VideoEncoderConfig}}:
-    1. If the {{Codec String}} contains a profile and the User Agent can't
+    1. If the <a>Codec String</a> contains a profile and the User Agent can't
         provide a <a>codec</a> that can encode the exact profile indicated by
-        the {{Codec String}}, return `false`.
-    2. If the {{Codec String}} contains a level and the User Agent can't
+        the <a>Codec String</a>, return `false`.
+    2. If the <a>Codec String</a> contains a level and the User Agent can't
         provide a <a>codec</a> that can encode to a level less than or equal to
-        the level indicated by the {{Codec String}}, return `false`.
-    3. If the {{Codec String}} contains constraint bits and the User Agent
+        the level indicated by the <a>Codec String</a>, return `false`.
+    3. If the <a>Codec String</a> contains constraint bits and the User Agent
         can't provide a <a>codec</a> that can produce an encoded bitstream at
-        least as constrained as indicated by the {{Codec String}}, return
+        least as constrained as indicated by the <a>Codec String</a>, return
         `false`.
 3. If the User Agent can provide a <a>codec</a> to support all entries of the
     |config|, including applicable default values for keys that are not
