Improve structure of the algorithm variables.

--- a/index.src.html
+++ b/index.src.html
@@ -1445,17 +1445,17 @@ Run these steps:
 1. If |config| is an {{AudioDecoderConfig}} or {{VideoDecoderConfig}} and the
     User Agent can't provide a <a>codec</a> that can decode the exact profile
     (where present), level (where present), and constraint bits (where present)
-    indicated by the <a>Codec String</a>, return `false`.
+    indicated by the <a>codec string</a> in |config|.codec, return `false`.
 2. If |config| is an {{AudioEncoderConfig}} or {{VideoEncoderConfig}}:
-    1. If the <a>Codec String</a> contains a profile and the User Agent can't
-        provide a <a>codec</a> that can encode the exact profile indicated by
-        the <a>Codec String</a>, return `false`.
-    2. If the <a>Codec String</a> contains a level and the User Agent can't
-        provide a <a>codec</a> that can encode to a level less than or equal to
-        the level indicated by the <a>Codec String</a>, return `false`.
-    3. If the <a>Codec String</a> contains constraint bits and the User Agent
-        can't provide a <a>codec</a> that can produce an encoded bitstream at
-        least as constrained as indicated by the <a>Codec String</a>, return
+    1. If the <a>codec string</a> in |config|.codec contains a profile and the
+        User Agent can't provide a <a>codec</a> that can encode the exact
+        profile indicated by |config|.codec, return `false`.
+    2. If the <a>codec string</a> in |config|.codec contains a level and the
+        User Agent can't provide a <a>codec</a> that can encode to a level less
+        than or equal to the level indicated by |config|.codec, return `false`.
+    3. If the <a>codec string</a> in |config|.codec contains constraint bits and
+        the User Agent can't provide a <a>codec</a> that can produce an encoded
+        bitstream at least as constrained as indicated by |config|.codec, return
         `false`.
 3. If the User Agent can provide a <a>codec</a> to support all entries of the
     |config|, including applicable default values for keys that are not
@@ -1620,7 +1620,7 @@ To check if an {{AudioDecoderConfig}} is a <dfn>valid AudioDecoderConfig</dfn>,
 
 <dl>
   <dt><dfn dict-member for=AudioDecoderConfig>codec</dfn></dt>
-  <dd>Contains a <a>codec string</a> describing the codec.</dd>
+  <dd>Contains a <a>codec string</a> in |config|.codec describing the codec.</dd>
 
   <dt><dfn dict-member for=AudioDecoderConfig>sampleRate</dfn></dt>
   <dd>The number of frame samples per second.</dd>
@@ -1804,7 +1804,7 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
 
 <dl>
   <dt><dfn dict-member for=VideoEncoderConfig>codec</dfn></dt>
-  <dd>Contains a <a>codec string</a> describing the codec.</dd>
+  <dd>Contains a <a>codec string</a> in |config|.codec describing the codec.</dd>
 
   <dt><dfn dict-member for=VideoEncoderConfig>width</dfn></dt>
   <dd>
