--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -98,7 +98,9 @@ ISSUE: Several registrations contain TODOs which should be replaced with links
   <tr>
     <td>mp3</td>
     <td>MP3</td>
-    <td>N/A</td>
+    <td>[MP3 WebCodecs
+      Registration](https://www.w3.org/TR/webcodecs-mp3-codec-registration/)
+    [[WEBCODECS-MP3-CODEC-REGISTRATION]]</td>
   </tr>
   <tr>
     <td>mp4a.*</td>
