--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -93,7 +93,7 @@ ISSUE: Several registrations contain TODOs which should be replaced with links
   <tr>
     <td>flac</td>
     <td>Flac</td>
-    <td>TODO (AudioDecoderConfig.description)</td>
+    <td>[FLAC codec registration](https://www.w3.org/TR/webcodecs-flac-codec-registration/) [[WEBCODECS-FLAC-CODEC-REGISTRATION]]</td>
   </tr>
   <tr>
     <td>mp3</td>
