--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -157,7 +157,7 @@ ISSUE: Several registrations contain TODOs which should be replaced with links
   <tr>
     <td>vp09.*</td>
     <td>VP9</td>
-    <td>TODO (string)</td>
+    <td>[VP9 codec registration](https://www.w3.org/TR/webcodecs-vp9-codec-registration/) [[WEBCODECS-VP9-CODEC-REGISTRATION]]</td>
   </tr>
 </table>
 
