--- a/index.src.html
+++ b/index.src.html
@@ -1901,7 +1901,7 @@ specialized hardware. {{HardwareAcceleration/prefer-hardware}} and
 respect these values when possible, User Agents may ignore these values in some
 or all circumstances for any reason.
 
-To avoid fingerprinting issues, User Agents SHOULD ensure rejection or
+To prevent fingerprinting issues, User Agents MUST ensure rejection or
 acceptance of a given {{HardwareAcceleration}} preference reveals no additional
 information on top of what is revealed by [[media-capabilities]] or other web
 exposed capability systems the User Agent may provide.
