--- a/index.src.html
+++ b/index.src.html
@@ -772,7 +772,7 @@ Algorithms {#videodecoder-algorithms}
             by the codec implementation. If no {{VideoColorSpace}} is detected,
             let |colorSpace| be `undefined`.
 
-            NOTE: The codec implementation may detect a {{VideoColorSpace}} by
+            NOTE: The codec implementation can detect a {{VideoColorSpace}} by
                 analyzing the bitstream. Detection is not required and may not
                 always be feasible. The exact method of detection is implementer
                 defined and codec-specific. Authors may override the
@@ -3345,8 +3345,8 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
         constructed with |overrideColorSpace|.
 
         NOTE: User Agents may replace `null` members of the provided
-            |overrideColorSpace| with  guessed values as determined by
-            implementer defined hueristics.
+            |overrideColorSpace| with guessed values as determined by
+            implementer defined heuristics.
 
     2. Otherwise, if {{VideoFrame/[[format]]}} is an [=RGB format=] return a new
         instance of the [=sRGB Color Space=]
@@ -3625,7 +3625,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
 ### Rendering ### {#videoframe-rendering}
 
 When rendered, for example by {{CanvasDrawImage}}
-{{CanvasDrawImage/drawImage()}}, a {{VideoFrame}} should be converted to a
+{{CanvasDrawImage/drawImage()}}, a {{VideoFrame}} must be converted to a
 color space compatible with the rendering target, unless color conversion is
 explicitly disabled.
 
