Fix duration/timestamp error

--- a/index.src.html
+++ b/index.src.html
@@ -2115,7 +2115,7 @@ enum EncodedAudioChunkType {
     1. Assign `init.type` to {{EncodedAudioChunk/[[type]]}}.
     2. Assign `init.timestamp` to {{EncodedAudioChunk/[[timestamp]]}}.
     3. If `init.duration` exists, assign it to
-        {{EncodedAudioChunk/[[timestamp]]}}, or assign `null` otherwise.
+        {{EncodedAudioChunk/[[duration]]}}, or assign `null` otherwise.
     4. Assign a copy of `init.data` to {{EncodedAudioChunk/[[internal data]]}}.
     5. Assign `init.data.byteLength` to {{EncodedAudioChunk/[[byte length]]}};
 5. Return |chunk|.
