Reword to be more precise.

--- a/index.src.html
+++ b/index.src.html
@@ -1901,10 +1901,12 @@ specialized hardware. {{HardwareAcceleration/prefer-hardware}} and
 respect these values when possible, User Agents may ignore these values in some
 or all circumstances for any reason.
 
-To prevent fingerprinting issues, User Agents MUST ensure rejection or
-acceptance of a given {{HardwareAcceleration}} preference reveals no additional
-information on top of what is revealed by [[media-capabilities]] or other web
-exposed capability systems the User Agent may provide.
+To prevent fingerprinting, if a User Agent implements [[media-capabilities]],
+the User Agent MUST ensure rejection or acceptance of a given
+{{HardwareAcceleration}} preference reveals no additional information on top of
+what is inherent to the User Agent and revealed by [[media-capabilities]]. If a
+User Agent does not implement [[media-capabilties]] for reasons of
+fingerprinting, they SHOULD ignore the {{HardwareAcceleration}} preference.
 
 <div class='note'>
   NOTE: Good examples of when a User Agent may ignore
