Add AAC to the registry

--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -105,7 +105,9 @@ ISSUE: Several registrations contain TODOs which should be replaced with links
   <tr>
     <td>mp4a.*</td>
     <td>AAC</td>
-    <td>TODO (string + AudioDecoderConfig.description)</td>
+    <td>[AAC WebCodecs
+      Registration](https://www.w3.org/TR/webcodecs-aac-codec-registration/)
+    [[WEBCODECS-AAC-CODEC-REGISTRATION]]</td>
   </tr>
   <tr>
     <td>opus</td>
