Use 'global object'

--- a/index.src.html
+++ b/index.src.html
@@ -4986,8 +4986,8 @@ if it is:
         NOTE: This prevents long running encode tasks from being interrupted.
 
     - An {{AudioDecoder}} or {{VideoDecoder}}, when there is, respectively, an
-        [=active=] {{AudioEncoder}} or {{VideoEncoder}} in the same {{Window}}
-        (or {{WorkerGlobalScope}} for if the codec is running in a worker).
+        [=active=] {{AudioEncoder}} or {{VideoEncoder}} in the same
+        [=webappapis/global object=].
 
         NOTE: This prevents prevents breaking long running transcoding tasks.
 
