Make VideoColorSpace constructor argument optional
The constructor takes a `VideoColorSpaceInit` dictionary as input that does not
have any required parameter. Quoting from the Web IDL spec, the input "must be
specified as optional and have a default value provided. This is to encourage
API designs that do not require authors to pass an empty dictionary value when
they wish only to use the dictionary’s default values."
https://heycam.github.io/webidl/#idl-operations

--- a/index.src.html
+++ b/index.src.html
@@ -3982,7 +3982,7 @@ Video Color Space Interface {#video-color-space-interface}
 <xmp class='idl'>
 [Exposed=(Window,DedicatedWorker)]
 interface VideoColorSpace {
-  constructor(VideoColorSpaceInit init);
+  constructor(optional VideoColorSpaceInit init = {});
 
   readonly attribute VideoColorPrimaries? primaries;
   readonly attribute VideoTransferCharacteristics? transfer;
