Accept multiple codec strings for mp3 and h264
This fixes #333.

--- a/avc_codec_registration.src.html
+++ b/avc_codec_registration.src.html
@@ -57,6 +57,12 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
     "title": "H.264 : Advanced video coding for generic audiovisual services",
     "publisher": "ITU",
     "date": "June 2019"
+  },
+  "iso14496-15": {
+    "href": "https://www.iso.org/standard/74429.html",
+    "title": "ISO/IEC 14496-15:2019 Information technology — Coding of audio-visual objects — Part 15: Carriage of network abstraction layer (NAL) unit structured video in the ISO base media file format",
+    "publisher": "ISO",
+    "date": "September 2019"
   }
 }
 </pre>
@@ -64,13 +70,8 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
 Fully qualified codec strings {#fully-qualified-codec-strings}
 ==============================================================
 
-The codec string begins with the prefix "avc1.", with a suffix of 6 characters
-as described in Section 3.4 of [[rfc6381]].
-
-NOTE: The common "avc3." prefix is intentionally not included. This prefix does
-  not signal a material difference to decoder inputs, so it is omitted for
-  simplification. For the purposes of this registration, authors should simply
-  map "avc3." to "avc1.".
+The codec string begins with the prefix "avc1." or "avc3.", with a suffix of 6
+characters as described respectively in Section 3.4 of [[rfc6381]] and Section 5.4.1 of [[iso14496-15]].
 
 VideoDecoderConfig description {#videodecoderconfig-description}
 ================================================================
