--- a/mp3_codec_registration.src.html
+++ b/mp3_codec_registration.src.html
@@ -61,7 +61,13 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
 Fully qualified codec strings {#fully-qualified-codec-strings}
 ==============================================================
 
-The codec string is `"mp3"`.
+This codec has multiple equivalent codec strings:
+
+- `"mp3"
+- `"mp4a.69"`
+- `"mp4a.6B"`
+- `"mp4a.69"`
+
 
 EncodedAudioChunk data {#encodedaudiochunk-data}
 ================================================
