Expand codec activity definitions

--- a/index.src.html
+++ b/index.src.html
@@ -4965,9 +4965,16 @@ The rules governing when a codec may be reclaimed depend on whether the codec is
 an [=active=] or [=inactive=] codec and/or a [=background=] codec.
 
 An <dfn lt="active codec|active">active codec</dfn> is a codec that has
-received a call to `encode()` or `decode()` in the past `10 seconds`, or has
-called its `output()` callback in the past `10 seconds`. An
-<dfn lt="inactive codec|inactive">inactive codec</dfn> is any codec that does
+received a call to `encode()`, `decode()`, `configure()`, `flush()` or `reset()`
+in the past `10 seconds`, or has called its `output()` callback in the past `10
+seconds`. Addionally, {{VideoEncoder}}s are considered [=active=] if they are
+making progress in encoding queued {{VideoFrame}}s.
+
+NOTE: Encoding large {{VideoFrame}}s can take more than `10s` per frame. The
+special case for {{VideoEncoder}}s ensures that they are not reclaimed if more
+than `10 seconds` elapses between each `output()` callback.
+
+An <dfn lt="inactive codec|inactive">inactive codec</dfn> is any codec that does
 not meet the definition of an [=active codec=].
 
 A <dfn lt="background codec|background">background codec</dfn> is a codec whose
