--- a/index.src.html
+++ b/index.src.html
@@ -4954,7 +4954,7 @@ Resource Reclamation{#resource-reclamation}
 
 When resources are constrained, a User Agent MAY proactively reclaim codecs.
 This is particularly true in the case where hardware codecs are limited, and
-shared accross all web pages.
+shared accross web pages or platform apps.
 
 To <dfn>reclaim a codec</dfn>, a User Agent MUST run the appropriate
 close algorithm (amongst [=Close AudioDecoder=], [=Close AudioEncoder=],
@@ -4998,7 +4998,7 @@ if it is:
 
         NOTE: This prevents prevents breaking long running transcoding tasks.
 
-    - An {{AudioDecoder}}, when its tab is actively playing audio.
+    - An {{AudioDecoder}}, when its tab is audibly playing audio.
 
 Security Considerations{#security-considerations}
 =================================================
