Activate lint for accidental rfc2119 in non-normative section of the spec

--- a/index.src.html
+++ b/index.src.html
@@ -20,6 +20,7 @@ Abstract: This specification defines interfaces to codecs for encoding and
     technology developed elsewhere. Implementers may support any combination of
     codecs or none at all.
 
+Complain About:accidental-2119 yes
 Markup Shorthands:css no, markdown yes, dfn yes
 !Participate: <a href="https://github.com/w3c/webcodecs">Git Repository.</a>
 !Participate: <a href="https://github.com/w3c/webcodecs/issues/new">File an issue.</a>
