Make one occurence normative, keep the rfc2119 word

--- a/index.src.html
+++ b/index.src.html
@@ -3356,9 +3356,9 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
 :: 1. If |overrideColorSpace| is provided, return a new {{VideoColorSpace}}
         constructed with |overrideColorSpace|.
 
-        NOTE: User Agents may replace `null` members of the provided
-            |overrideColorSpace| with guessed values as determined by
-            implementer defined heuristics.
+        User Agents MAY replace `null` members of the provided
+        |overrideColorSpace| with guessed values as determined by implementer
+        defined heuristics.
 
     2. Otherwise, if {{VideoFrame/[[format]]}} is an [=RGB format=] return a new
         instance of the [=sRGB Color Space=]
