--- a/index.src.html
+++ b/index.src.html
@@ -2014,7 +2014,7 @@ To prevent fingerprinting, if a User Agent implements [[media-capabilities]],
 the User Agent MUST ensure rejection or acceptance of a given
 {{HardwareAcceleration}} preference reveals no additional information on top of
 what is inherent to the User Agent and revealed by [[media-capabilities]]. If a
-User Agent does not implement [[media-capabilties]] for reasons of
+User Agent does not implement [[media-capabilities]] for reasons of
 fingerprinting, they SHOULD ignore the {{HardwareAcceleration}} preference.
 
 <div class='note'>
