--- a/index.src.html
+++ b/index.src.html
@@ -2024,7 +2024,7 @@ fingerprinting, they SHOULD ignore the {{HardwareAcceleration}} preference.
   circumstances where the User Agent determines an alternative setting would
   better serve the end user.
 
-  NOTE: Most authors will be best served by using the default of
+  Most authors will be best served by using the default of
   {{HardwareAcceleration/no-preference}}. This gives the User Agent flexibility
   to optimize based on its knowledge of the system and configuration. A common
   strategy will be to prioritize hardware acceleration at higher resolutions
