Address review comments

--- a/aac_codec_registration.src.html
+++ b/aac_codec_registration.src.html
@@ -62,14 +62,14 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
 Fully qualified codec strings {#fully-qualified-codec-strings}
 ==============================================================
 
-This codec has multiple possible codec string:
+This codec has multiple possible codec strings:
 
-- `"mp4a.40.2"`
-- `"mp4a.40.02"`
-- `"mp4a.40.5"`
-- `"mp4a.40.05"`
-- `"mp4a.67"`
-- `"mp4a.40.29"`
+- `"mp4a.40.2"` — MPEG-4 AAC LC
+- `"mp4a.40.02"` — MPEG-4 AAC LC, leading 0 for Aud-OTI compatibility
+- `"mp4a.40.5"` — MPEG-4 HE-AAC v1 (AAC LC + SBR)
+- `"mp4a.40.05"` — MPEG-4 HE-AAC v1 (AAC LC + SBR), leading 0 for Aud-OTI compatibility
+- `"mp4a.40.29"` — MPEG-4 HE-AAC v2 (AAC LC + SBR + PS)
+- `"mp4a.67"` — MPEG-2 AAC LC
 
 AudioDecoderConfig description {#audiodecoderconfig-description}
 ================================================================
@@ -78,7 +78,7 @@ If {{AudioDecoderConfig.description}} is present, it is assumed to a
 `AudioSpecificConfig` as defined in [[iso14496-3]] section 1.6.2.1, Table 1.15,
 and the bitstream is assumed to be in {{AacBitstreamFormat/aac}}.
 
-If the {{AudioDecoderConfig.description}} is not present, ht ebitstream is
+If the {{AudioDecoderConfig.description}} is not present, the bitstream is
 assumed to be in {{AacBitstreamFormat/adts}} format.
 
 The {{AudioDecoderConfig.sampleRate}} and {{AudioDecoderConfig.channelCount}}
