--- a/index.src.html
+++ b/index.src.html
@@ -3287,7 +3287,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
         VideoFrameCopyToOptions=] algorithm with |options|.
     4. If |combinedLayout| is an exception, return a promise rejected with
         |combinedLayout|.
-    5. If `destionation.byteLength` is less than |combinedLayout|'s [=combined
+    5. If `destination.byteLength` is less than |combinedLayout|'s [=combined
         buffer layout/allocationSize=], return a promise rejected with a
         {{TypeError}}.
     6. Let |p| be a new {{Promise}}.
