--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -45,6 +45,7 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
         text: EncodedAudioChunk; url: encodedaudiochunk
     type: dictionary
         text: AudioDecoderConfig; url: dictdef-audiodecoderconfig
+        text: AudioEncoderConfig; url: dictdef-audioencoderconfig
 </pre>
 
 <pre class='biblio'>
@@ -72,10 +73,15 @@ The codec string is `"opus"`.
 EncodedAudioChunk data {#encodedaudiochunk-data}
 ================================================
 
-An {{EncodedAudioChunk}} containing Opus can be in two different formats,
-depending on if {{AudioDecoderConfig.description}} has been set during
-initialization.
+An {{EncodedAudioChunk}} containing Opus can be in two different formats.
 
+If the bitstream is in {{OpusBitstreamFormat/opus}} format,
+{{EncodedAudioChunk}} have to be Opus packets, as described in [section
+3](https://datatracker.ietf.org/doc/html/rfc6716#section-3) of [[OPUS]]
+
+If the bitstream is in {{OpusBitstreamFormat/ogg}} format,
+{{EncodedAudioChunk}} have to be audio data packets, as described in [section
+3](https://datatracker.ietf.org/doc/html/rfc7845#section-3) of [[OPUS-IN-OGG]].
 
 AudioDecoderConfig description {#audiodecoderconfig-description}
 ================================================================
@@ -83,15 +89,76 @@ AudioDecoderConfig description {#audiodecoderconfig-description}
 {{AudioDecoderConfig.description}} can optionally set to an Identification
 Header, described in section 5.1 of [[OPUS-IN-OGG]].
 
-If an {{AudioDecoderConfig.description}} has been set, the
-{{EncodedAudioChunk}}s passed to the {{AudioDecoder.decode}}} method have to be
-in audio data packets, as described in [section
-2](https://datatracker.ietf.org/doc/html/rfc7845#section-3) of [[OPUS-IN-OGG]].
+If an {{AudioDecoderConfig.description}} has been set, the bistream is assumed
+to be in {{OpusBitstreamFormat/ogg}} format.
 
-If an {{AudioDecoderConfig.description}} has not been set, then the
-{{EncodedAudioChunk}}s passed to the {{AudioDecoder.decode}} method have to be
-Opus packets, as described in [section
-3](https://datatracker.ietf.org/doc/html/rfc6716#section-3) of [[OPUS]].
+If an {{AudioDecoderConfig.description}} has not been set, the bitstream is
+assumed to be in {{OpusBitstreamFormat/opus}} format.
+
+AudiEncoderConfig extensions {#audioencoderconfig-extensions}
+=============================================================
+
+<pre class='idl'>
+<xmp>
+partial dictionary AudioEncoderConfig {
+  OpusEncoderConfig opus;
+};
+</xmp>
+</pre>
+
+<dl>
+  <dt><dfn dict-member for=AudioEncoderConfig>opus</dfn></dt>b
+  <dd>
+    Contains codec specific configuration options for the Opus codec.
+  </dd>
+</dl>
+
+
+OpusEncoderConfig {#opus-encoder-config}
+--------------------------------------
+
+<pre class='idl'>
+<xmp>
+dictionary OpusEncoderConfig {
+  OpusBitstreamFormat format = "opus";
+};
+</xmp>
+</pre>
+
+<dl>
+  <dt><dfn dict-member for=OpusEncoderConfig>format</dfn></dt>
+  <dd>
+    Configures the format of output {{EncodedAudioChunk}}s. See
+    {{OpusBitstreamFormat}}.
+  </dd>
+</dl>
+
+OpusBitstreamFormat {#opus-bitstream-format}
+------------------------------------------
+<pre class='idl'>
+<xmp>
+enum OpusBitstreamFormat {
+  "opus",
+  "ogg",
+};
+</xmp>
+</pre>
+
+The {{OpusBitstreamFormat}} determines if extra-data are necessary to decode the
+encoded audio stream.
+
+<dl>
+  <dt><dfn enum-value for=OpusBitstreamFormat>opus</dfn></dt>
+  <dd>
+    No metadata are necessary to decode the encoded audio stream.
+  </dd>
+  <dt><dfn enum-value for=OpusBitstreamFormat>ogg</dfn></dt>
+  <dd>
+    The metadata of the encoded audio stream are provided at configuration via
+    {{AudioDecoderConfig.description}}.
+  </dd>
+</dl>
+
 
 EncodedAudioChunk type {#encodedaudiochunk-type}
 ================================================
