fix spelling typos

--- a/index.src.html
+++ b/index.src.html
@@ -3428,7 +3428,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
         |frame|.{{VideoFrame/timestamp}}.
     9. If |resource| has a known {{VideoColorSpace}}, assign its value to
         {{VideoFrame/[[color space]]}}.
-    10. Otherwise, assign a new {{VideoColorSpace}}, contstructed with an emtpy
+    10. Otherwise, assign a new {{VideoColorSpace}}, constructed with an empty
         {{VideoColorSpaceInit}}, to {{VideoFrame/[[color space]]}}.
 
 : <dfn>Clone VideoFrame</dfn> (with |frame|)
