Add a bit of CSS to highlight RFC2119 words

--- a/index.src.html
+++ b/index.src.html
@@ -131,6 +131,11 @@ table#sample-types .even {
     background-color: lightgrey;
 }
 
+.rfc2119 {
+  text-transform: lowercase;
+  font-variant: small-caps;
+  font-style: normal;
+}
 
 </style>
 
