Add rounding of computed display sizes

--- a/index.src.html
+++ b/index.src.html
@@ -3488,12 +3488,11 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
             |defaultVisibleRect|.{{DOMRect/width}}.
         2. Let |heightScale| be the result of dividing |defaultDisplayHeight| by
             |defaultVisibleRect|.{{DOMRect/height}}.
-        3. Assign the result of multiplying |frame|'s
-            {{VideoFrame/[[visible width]]}} by |widthScale| to |frame|'s
+        3. Multiply |frame|'s {{VideoFrame/[[visible width]]}} by |widthScale|
+            and round the result (away from zero). Assign the rounded result to
             {{VideoFrame/[[display width]]}}.
-        4. Assign the result of multiplying |frame|'s
-            {{VideoFrame/[[visible height]]}} by |heightScale| to |frame|'s
-            {{VideoFrame/[[display height]]}}.
+        4. Multiply |frame|'s {{VideoFrame/[[visible height]]}} by
+            |heightScale| and round the result (away from zero). Assign the rounded result to |frame|'s {{VideoFrame/[[display height]]}}.
 
 : <dfn>Clone VideoFrame</dfn> (with |frame|)
 :: 1. Let |clone| be a new {{VideoFrame}} initialized as follows:
