--- a/index.src.html
+++ b/index.src.html
@@ -2596,7 +2596,7 @@ dictionary AudioDataInit {
         equal to {{AudioData/[[number of channels]]}}, throw a
         {{RangeError}}.
     5. If {{AudioData/[[format]]}} does not equal |destFormat| and the User
-        Agent does not support requested {{AudioSampleFormat}} conversion,
+        Agent does not support the requested {{AudioSampleFormat}} conversion,
         throw a {{NotSupportedError}} {{DOMException}}.
         Conversion to {{f32-planar}} <em class="rfc2119">MUST</em> always be
         supported.
