Mark codec interfaces SecureContext
Fixes #350

--- a/index.src.html
+++ b/index.src.html
@@ -271,7 +271,7 @@ AudioDecoder Interface {#audiodecoder-interface}
 ================================================
 
 <xmp class='idl'>
-[Exposed=(Window,DedicatedWorker)]
+[Exposed=(Window,DedicatedWorker), SecureContext]
 interface AudioDecoder {
   constructor(AudioDecoderInit init);
 
@@ -538,7 +538,7 @@ VideoDecoder Interface {#videodecoder-interface}
 ================================================
 
 <xmp class='idl'>
-[Exposed=(Window,DedicatedWorker)]
+[Exposed=(Window,DedicatedWorker), SecureContext]
 interface VideoDecoder {
   constructor(VideoDecoderInit init);
 
@@ -833,7 +833,7 @@ AudioEncoder Interface {#audioencoder-interface}
 ================================================
 
 <xmp class='idl'>
-[Exposed=(Window,DedicatedWorker)]
+[Exposed=(Window,DedicatedWorker), SecureContext]
 interface AudioEncoder {
   constructor(AudioEncoderInit init);
 
@@ -1154,7 +1154,7 @@ VideoEncoder Interface {#videoencoder-interface}
 ================================================
 
 <xmp class='idl'>
-[Exposed=(Window,DedicatedWorker)]
+[Exposed=(Window,DedicatedWorker), SecureContext]
 interface VideoEncoder {
   constructor(VideoEncoderInit init);
 
@@ -4289,7 +4289,7 @@ ImageDecoder Interface {#imagedecoder-interface}
 
 <pre class='idl'>
 <xmp>
-[Exposed=(Window,DedicatedWorker)]
+[Exposed=(Window,DedicatedWorker), SecureContext]
 interface ImageDecoder {
   constructor(ImageDecoderInit init);
 
