--- a/index.src.html
+++ b/index.src.html
@@ -1755,13 +1755,13 @@ run these steps:
 
   <dt><dfn dict-member for=VideoDecoderConfig>codedWidth</dfn></dt>
   <dd>
-    Width of the VideoFrame in pixels, potentionally including non-visible
+    Width of the VideoFrame in pixels, potentially including non-visible
     padding, and prior to considering potential ratio adjustments.
   </dd>
 
   <dt><dfn dict-member for=VideoDecoderConfig>codedHeight</dfn></dt>
   <dd>
-    Height of the VideoFrame in pixels, potentionally including non-visible
+    Height of the VideoFrame in pixels, potentially including non-visible
     padding, and prior to considering potential ratio adjustments.
   </dd>
 
@@ -2991,11 +2991,11 @@ dictionary VideoFrameBufferInit {
     {{VideoPixelFormat}} or when {{platform object/[[Detached]]}} is `true`.
 
 : <dfn attribute for=VideoFrame>[[coded width]]</dfn>
-:: Width of the {{VideoFrame}} in pixels, potentionally including non-visible
+:: Width of the {{VideoFrame}} in pixels, potentially including non-visible
     padding, and prior to considering potential ratio adjustments.
 
 : <dfn attribute for=VideoFrame>[[coded height]]</dfn>
-:: Height of the {{VideoFrame}} in pixels, potentionally including non-visible
+:: Height of the {{VideoFrame}} in pixels, potentially including non-visible
     padding, and prior to considering potential ratio adjustments.
 
 : <dfn attribute for=VideoFrame>[[visible left]]</dfn>
@@ -3191,14 +3191,14 @@ dictionary VideoFrameBufferInit {
     {{VideoFrame/[[format]]}}.
 
 : <dfn attribute for=VideoFrame>codedWidth</dfn>
-:: Width of the {{VideoFrame}} in pixels, potentionally including non-visible
+:: Width of the {{VideoFrame}} in pixels, potentially including non-visible
     padding, and prior to considering potential ratio adjustments.
 
     The {{VideoFrame/codedWidth}} getter steps are to return
     {{VideoFrame/[[coded width]]}}.
 
 : <dfn attribute for=VideoFrame>codedHeight</dfn>
-:: Height of the {{VideoFrame}} in pixels, potentionally including non-visible
+:: Height of the {{VideoFrame}} in pixels, potentially including non-visible
     padding, and prior to considering potential ratio adjustments.
 
     The {{VideoFrame/codedHeight}} getter steps are to return
