Fix normative usage in note

--- a/index.src.html
+++ b/index.src.html
@@ -3835,7 +3835,7 @@ dictionary PlaneLayout {
 : <dfn dict-member for=PlaneLayout>offset</dfn>
 :: The offset in bytes where the given plane begins within a {{BufferSource}}.
 
-    NOTE: Authors may use {{PlaneLayout/offset}} to create a gap of bytes
+    NOTE: Authors can use {{PlaneLayout/offset}} to create a gap of bytes
         between planes. Such gaps can be mutated (e.g. zeroed) by the User
         Agent. The specifics of such mutations (if any) are implementer defined.
 
